# lockbox-backend

./: Cargo.toml  DYNAMODB_MIGRATION.md  README.md  backup-dynamodb-tables.sh  build.sh  fix-backup-vault.sh  migrate.sh  restore-dynamodb-tables.sh  run-all-tests.sh  run-migration.sh  setup-aws-tools.sh  template-migration.yaml  template.yaml
.github/workflows/: deploy.yml
box-service/: Cargo.toml
box-service/src/handlers/: box_handlers.rs  box_handlers.rs.bak3  guardian_handlers.rs  guardian_handlers.rs.bak3  mod.rs  user_handlers.rs
box-service/src/models/: mod.rs
box-service/src/routes/: mod.rs
box-service/src/tests/: box_tests.rs  box_tests.rs.bak  box_tests.rs.bak2  box_tests.rs.bak3  guardian_tests.rs  guardian_tests.rs.bak  guardian_tests.rs.bak2  guardian_tests.rs.bak3
invitation-event-service/src/: handlers.rs
invitation-event-service/src/tests/: invitation_event_service_tests.rs
invitation-service/src/handlers/: invitation_handlers.rs  invitation_handlers.rs.bak3
invitation-service/src/models/: mod.rs  mod.rs.bak3
invitation-service/src/routes/: mod.rs  mod.rs.bak3
invitation-service/src/tests/: invitation_handlers_test.rs
notification-service/: Cargo.toml
notification-service/src/: errors.rs  main.rs
reminder-service/: Cargo.toml
reminder-service/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs  push.rs
shared/src/auth/: mod.rs.bak3
shared/src/models/: events.rs  mod.rs  mod.rs.bak3
shared/src/store/: dynamo.rs  dynamo.rs.bak3  mod.rs
shared/src/test_utils/: dynamo_test_utils.rs.bak3  mock_box_store.rs
(+3 files in other folders)
