[package]
name = "reminder-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "reminder-service"
path = "src/main.rs"

[dependencies]
lockbox-shared = { path = "../shared" }
aws_lambda_events = { version = "0.15", default-features = false, features = ["cloudwatch_events"] }
lambda_runtime = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
